[package]
name = "pyrtls"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.71"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23"
rustls = { version = "0.23.22", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-platform-verifier = "0.5"
socket2 = "0.5"
webpki-roots = "0.26"

[dev-dependencies]
anyhow = "1"
rcgen = "0.13"
