[package]
name = "pyrtls"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.71"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25"
rustls = { version = "0.23.29", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-platform-verifier = "0.6"
socket2 = "0.6"
webpki-roots = "1"

[dev-dependencies]
anyhow = "1"
rcgen = "0.14"
